--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <form class="push-0" method="POST" action="https://formspree.io/tole0012@algonquinlive.com">
         <div class="push">
           <label for="name">Name</label>
-          <input type="name" name="name">
+          <input id="name" name="name">
         </div>
         <div class="push">
           <label for="email">Your email</label>
